infra/k8s/base/sensor-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-simulator
  namespace: agrosolutions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-simulator
  template:
    metadata:
      labels:
        app: sensor-simulator
    spec:
      containers:
        - name: sensor-simulator
          image: agrosolutions-sensor-simulator:latest
          imagePullPolicy: IfNotPresent
